# TestRunner-Pro

./: .env  .gitignore  README.md  jest.config.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: test-runner.yaml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/api/: auth.js.html  index.html  users.js.html
coverage/lcov-report/database/: index.html  index.js.html
coverage/lcov-report/middleware/: auth.js.html  index.html
coverage/lcov-report/src/: app.js.html  index.html
coverage/lcov-report/src/api/: auth.js.html  index.html  users.js.html
coverage/lcov-report/src/client/: App.jsx.html  index.html  index.jsx.html
coverage/lcov-report/src/client/components/: Button.jsx.html  Input.jsx.html  Navigation.jsx.html  index.html
coverage/lcov-report/src/database/: index.html  index.js.html
coverage/lcov-report/src/middleware/: auth.js.html  index.html
cpp/: CMakeLists.txt
cpp/include/: memory_profiler.h
cpp/src/: memory_profiler.cpp
cpp/tests/: memory_tests.cpp
scripts/: migrate.js  schema.sql
src/: app.js
src/api/: auth.js  users.js
src/client/: App.jsx  index.html
src/client/components/: Button.jsx  Input.jsx  Navigation.jsx
src/client/pages/: DashboardPage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx
src/database/: index.js
tests/: setup.js
tests/database/: advanced-queries.test.js
tests/integration/: api-extended.test.js  api.test.js
tests/unit/component/: Button.test.js
tests/utils/: testDataGenerator.js
(+5 files in other folders)
